--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 
 [dependencies]
 
-rumq-client = "0.1.0-alpha.10"
+rumqttc = "0.0.5"
 tokio = { version = "0.2", features = ["rt-threaded", "io-util", "tcp", "dns", "stream", "sync", "time", "macros"] }
 rand = "0.7"
 serde_json = "1.0"
