--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 
 [dependencies]
 
-rumqttc = "0.0.5"
-tokio = { version = "0.2", features = ["rt-threaded", "io-util", "tcp", "dns", "stream", "sync", "time", "macros"] }
+rumqttc = "0.4.0"
+tokio = { version = "1.0", features = ["full"] }
 rand = "0.7"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
